--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
+<head>
+  <title>mon site fait en nsi </title>
+  body {background-color:#ffe4a9 ;}
+</head>
 <body>
-<h1> bonjour </h1>
+<h1> bienvenue sur mon site de nsi  </h1>
+<p>test paragraphe </p>
 </body>
 </html>
