--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>mon site fait en nsi </title>
-  body {background-color:#ffe4a9 ;}
+  <style>body {background-color:#ffe4a9 ;}
+  </style>
+  
 </head>
 <body>
 <h1> bienvenue sur mon site de nsi  </h1>
