--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <title>mon site fait en nsi </title>
-  <style>body {background-color:#ffe4a9 ;}
-  </style>
   
 </head>
 <body>
+
+    <style>
+      body {
+        background-color:#ffe4a9 ;
+      }
+  </style>
 <h1> bienvenue sur mon site de nsi  </h1>
 <p>test paragraphe </p>
 </body>
