--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   
 </head>
 <body>
-
+<header>bonjour </header>
     <style>
       body {
         background-color:#ffe4a9 ;
+      }
+      header{
+        background-color:blue;
       }
   </style>
 <h1> bienvenue sur mon site de nsi  </h1>
 <p>test paragraphe </p>
 </body>
+  
 </html>
