--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       }
       header{
         background-color:blue;
+        height:15%;
       }
   </style>
 <h1> bienvenue sur mon site de nsi  </h1>
