--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         background-color:#ffe4a9 ;
       }
       header{
-        background-color:blue;
+        background-color:#d8d8d8;
         height:20%;
       }
   </style>
