--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         background-color:#ffe4a9 ;
       }
       header{
-        background-color:#d8d8d8;
+        background-color:#ffffff;
         height:20%;
+        border-radius:10%
       }
   </style>
 <h1> bienvenue sur mon site de nsi  </h1>
