--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <header>bonjour </header>
     <style>
       body {
+        padding:0;
         background-color:#ffe4a9 ;
       }
       header{
         background-color:#ffffff;
         height:20%;
-        border-radius:10%
+        border-radius:10px;
       }
   </style>
 <h1> bienvenue sur mon site de nsi  </h1>
