--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         background-color:#ffe4a9 ;
       }
       header{
-        background-color:#ffffff;
-        height:20%;
-        border-radius:10px;
+        background-color: #ffffff;
+  height: 50px;
+  border-radius: 10px;
+  position: relative;
       }
   </style>
 <h1> bienvenue sur mon site de nsi  </h1>
