--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         background-color:#ffe4a9 ;
       }
       header{
+        top:-5px;
         background-color: #ffffff;
   height: 50px;
   border-radius: 10px;
