--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   
 </head>
 <body>
-<header>bonjour </header>
+<header> <a href="page1.html">Page 1</a>
+<a href="page2.html">Page 2</a>
+<a href="page3.html">Page 3</a>
+<a href="page4.html">Page 4</a>
+<a href="page5.html">Page 5</a></header>
     <style>
       body {
         padding:0;
@@ -22,6 +26,6 @@
 <h1> bienvenue sur mon site de nsi  </h1>
 <p>test paragraphe </p>
 </body>
-  <iframe src="page1.html"></iframe>
+  
   
 </html>
