--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   
 </head>
 <body>
-<header> <a href="page1.html">Page 1</a>
+<header> 
+<a href="#page1">Page 1</a>
 <a href="page2.html">Page 2</a>
 <a href="page3.html">Page 3</a>
 <a href="page4.html">Page 4</a>
