--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
 <header> 
 <a href="#page1">Page 1</a>
-<a href="page2.html">Page 2</a>
-<a href="page3.html">Page 3</a>
-<a href="page4.html">Page 4</a>
-<a href="page5.html">Page 5</a></header>
+<a href="#page2">Page 2</a>
+<a href="#page3">Page 3</a>
+<a href="#page4">Page 4</a>
+<a href="#page5">Page 5</a></header>
     <style>
       body {
         padding:0;
