--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <header> 
-<a href="#page1">Page 1</a>
-<a href="#page2">Page 2</a>
-<a href="#page3">Page 3</a>
-<a href="#page4">Page 4</a>
-<a href="#page5">Page 5</a>
+<a href="#page1">Page 1</a></li>
+<a href="#page2">Page 2</a></li>
+<a href="#page3">Page 3</a></li>
+<a href="#page4">Page 4</a></li>
+<a href="#page5">Page 5</a></li>
 
 </header>
     <style>
