--- a/index.html
+++ b/index.html
@@ -1,34 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <title>mon site fait en nsi </title>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon site fait en NSI</title>
+    <style>
+        /* Style général */
+        body {
+            padding: 0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #ffe4a9;
+            text-align: center;
+        }
+
+        /* Style du header */
+        header {
+            background-color: #ffffff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        /* Style des liens du menu */
+        header a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            font-size: 18px;
+            padding: 10px;
+        }
+
+        header a:hover {
+            color: #ff8800;
+        }
+
+        /* Espacement pour que le contenu ne soit pas caché sous le menu */
+        main {
+            margin-top: 80px;
+            padding: 20px;
+        }
+
+        /* Style des sections */
+        section {
+            padding: 50px;
+            margin: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
-<header> 
-<a href="#page1">Page 1</a></li>
-<a href="#page2">Page 2</a></li>
-<a href="#page3">Page 3</a></li>
-<a href="#page4">Page 4</a></li>
-<a href="#page5">Page 5</a></li>
 
+<header>
+    <a href="#page1">Page 1</a>
+    <a href="#page2">Page 2</a>
+    <a href="#page3">Page 3</a>
+    <a href="#page4">Page 4</a>
+    <a href="#page5">Page 5</a>
 </header>
-    <style>
-      body {
-        padding:0;
-        background-color:#ffe4a9 ;
-      }
-      header{
-        top:-5px;
-        background-color: #ffffff;
-  height: 50px;
-  border-radius: 10px;
-  position: relative;
-      }
-  </style>
-<h1> bienvenue sur mon site de nsi  </h1>
-<p>test paragraphe </p>
+
+<main>
+    <h1>Bienvenue sur mon site de NSI</h1>
+    <p>Ceci est un site de démonstration pour NSI.</p>
+
+    <section id="page1">
+        <h2>Page 1</h2>
+        <p>Bienvenue sur la page 1.</p>
+    </section>
+
+    <section id="page2">
+        <h2>Page 2</h2>
+        <p>Contenu de la deuxième page.</p>
+    </section>
+
+    <section id="page3">
+        <h2>Page 3</h2>
+        <p>Informations sur la page 3.</p>
+    </section>
+
+    <section id="page4">
+        <h2>Page 4</h2>
+        <p>Contenu de la quatrième page.</p>
+    </section>
+
+    <section id="page5">
+        <h2>Page 5</h2>
+        <p>Bienvenue sur la page 5.</p>
+    </section>
+</main>
+
 </body>
-  
-  
 </html>
+
