--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
     <a href="#page4">Page 4</a>
     <a href="#page5">Page 5</a>
 </header>
-
+<main>
+    <h1>Bienvenue sur mon site de NSI</h1>
+    <p>Ceci est un site de démonstration pour NSI.</p>
+</main>
 </body>
 </html>
 
