--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </header>
 <main>
     <h1>Bienvenue sur mon site de NSI</h1>
-    <p>Ceci est un site de démonstration pour NSI.</p>
+    <p>Ceci est un site de démonstration pour la NSI.</p>
 </main>
     <h1> bienvenue sur mon site de nsi  </h1>
 <p>test paragraphe </p>
