--- a/index.html
+++ b/index.html
@@ -60,16 +60,20 @@
 <body>
 
 <header>
-    <a href="#page1">Page 1</a>
-    <a href="#page2">Page 2</a>
-    <a href="#page3">Page 3</a>
-    <a href="#page4">Page 4</a>
-    <a href="#page5">Page 5</a>
+    <ul>
+     <li><a href="#page1">Page 1</a></li>
+     <li><a href="#page2">Page 2</a></li>
+     <li><a href="#page3">Page 3</a></li>
+     <li><a href="#page4">Page 4</a></li>
+     <li><a href="#page5">Page 5</a></li>
+    </ul>
 </header>
 <main>
     <h1>Bienvenue sur mon site de NSI</h1>
     <p>Ceci est un site de démonstration pour la NSI.</p>
 </main>
+
+<style>
    
 </body>
 </html>
