--- a/index.html
+++ b/index.html
@@ -73,6 +73,40 @@
     <p>Ceci est un site de démonstration pour la NSI.</p>
 </main>
 
+    
+<main>
+    <!-- Page d'accueil (affichée par défaut) -->
+    <section id="accueil">
+        <h1>Bienvenue sur mon site de NSI</h1>
+        <p>Ceci est un site de démonstration pour la NSI.</p>
+    </section>
+
+    <!-- Pages du site -->
+    <section id="page1">
+        <h1>Page 1</h1>
+        <p>Bienvenue sur la première page.</p>
+    </section>
+
+    <section id="page2">
+        <h1>Page 2</h1>
+        <p>Contenu de la deuxième page.</p>
+    </section>
+
+    <section id="page3">
+        <h1>Page 3</h1>
+        <p>Informations sur la page 3.</p>
+    </section>
+
+    <section id="page4">
+        <h1>Page 4</h1>
+        <p>Bienvenue sur la quatrième page.</p>
+    </section>
+
+    <section id="page5">
+        <h1>Page 5</h1>
+        <p>Dernière page de la démonstration.</p>
+    </section>
+</main>
 
    
 </body>
