--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
     <p>Ceci est un site de démonstration pour la NSI.</p>
 </main>
 
-    
+<iframe id="page1" src="page1.html" ></iframe>
+<iframe id="page2" src="page2.html" ></iframe>
+<iframe id="page3" src="page3.html" ></iframe>
+<iframe id="page4" src="page4.html" ></iframe>
+<iframe id="page5" src="page5.html" ></iframe>
 
 
    
