--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <ul><
     <li><a href="#page1">page 1 </a></li> 
                                         
-        <li><a href="#page2">youtube </a></li> 
+        <li><a href="#page2">page 2 </a></li> 
     </ul> 
 
 <iframe id="page1" src="page1.html" ></iframe> 
