--- a/page1.html
+++ b/page1.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-  body {
-   background-color: #ffffff;
-   }
+ body {
+            padding: 0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            text-align: center;
+        }
 page 1
 </head>
