--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+ <style>
  body {
             padding: 0;
             margin: 0;
@@ -8,5 +8,7 @@
             background-color: #ffffff;
             text-align: center;
         }
+    </style>
+  <head>
 page 1
 </head>
