--- a/page5.html
+++ b/page5.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    body {
-   background-color: #ffffff;
-   }
+ <style>
+ body {
+            padding: 0;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            text-align: center;
+        }
+    </style>
+  <head>
 page 5
+    
 </head>
