--- a/page5.html
+++ b/page5.html
@@ -11,5 +11,5 @@
     </style>
   <head>
 
-    <video> src="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Texte</video>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=JtWo7QnzykHRPJXO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </head>
