--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,6 @@
         }
   
     </style>
-  <head>
+  <body>
 <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fprevost.lycee.ac-normandie.fr%2FIMG%2Fpdf%2Fpre_sentation_option_mages.pdf&psig=AOvVaw07SYzUResfXskN7i2vynk_&ust=1738744322968000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOiu98LNqYsDFQAAAAAdAAAAABAE"/>
-</head>
+</body>
